base/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: app-git
spec:
  to:
    kind: Service
    name: app-git
    weight: 100
  port:
    targetPort: 8080-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
